RESOLVED FIXED96312
[V8] currentDocument doesn't need to handle the case where there is no v8::Context
https://bugs.webkit.org/show_bug.cgi?id=96312
Summary [V8] currentDocument doesn't need to handle the case where there is no v8::Co...
Adam Barth
Reported 2012-09-10 13:41:33 PDT
[V8] currentDocument doesn't need to handle the case where there is no v8::Context
Attachments
Patch (1.55 KB, patch)
2012-09-10 13:42 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-09-10 13:42:17 PDT
Eric Seidel (no email)
Comment 2 2012-09-10 13:46:55 PDT
Comment on attachment 163197 [details] Patch k
Kentaro Hara
Comment 3 2012-09-10 13:48:25 PDT
In a series of your patches, it might be better to insert ASSERT() where the condition is not so obvious for ordinary people:)
Adam Barth
Comment 4 2012-09-10 13:53:41 PDT
> In a series of your patches, it might be better to insert ASSERT() where the condition is not so obvious for ordinary people:) Sure. If you see places where you think that would be useful, please mention them and I will add the ASSERTs.
Adam Barth
Comment 5 2012-09-10 16:21:19 PDT
Comment on attachment 163197 [details] Patch Clearing flags on attachment: 163197 Committed r128124: <http://trac.webkit.org/changeset/128124>
Adam Barth
Comment 6 2012-09-10 16:21:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.