[V8] currentDocument doesn't need to handle the case where there is no v8::Context https://bugs.webkit.org/show_bug.cgi?id=96312

Patch by Adam Barth <abarth@chromium.org> on 2012-09-10
Reviewed by Eric Seidel.

This function is always called while V8 is on the stack. It doesn't
need to handle this impossible error condition.

* bindings/v8/BindingState.cpp:
(WebCore::currentDocument):


Canonical link: https://commits.webkit.org/114217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128124 268f45cc-cd09-0410-ab3c-d52691b4dbfc